--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "format": "prettier . --write",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,6 +21,8 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2"
+    "eslint-config-next": "13.1.2",
+    "prettier": "2.8.3",
+    "prettier-plugin-tailwindcss": "0.2.1"
   }
 }
