--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "format": "prettier . --write",
-    "lint": "next lint"
+    "lint": "eslint . --fix"
   },
   "dependencies": {
     "next": "13.1.2",
@@ -21,7 +21,14 @@
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "eslint": "8.32.0",
+    "eslint-config-airbnb": "19.0.4",
+    "eslint-config-airbnb-typescript": "17.0.0",
     "eslint-config-next": "13.1.2",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-import": "2.27.5",
+    "eslint-plugin-jsx-a11y": "6.7.1",
+    "eslint-plugin-react": "7.32.1",
+    "eslint-plugin-react-hooks": "4.6.0",
     "prettier": "2.8.3",
     "prettier-plugin-tailwindcss": "0.2.1"
   }
