--- a/.eslintrc.yaml
+++ b/.eslintrc.yaml
@@ -28,7 +28,7 @@ rules:
   # ---------------------------- @typescript-eslint ---------------------------- #
   '@typescript-eslint/naming-convention': 0
   '@typescript-eslint/no-use-before-define': 0
-  "@typescript-eslint/no-unused-vars": 1
+  '@typescript-eslint/no-unused-vars': 1
   # ---------------------------------- Eslint ---------------------------------- #
   arrow-body-style: [1, 'as-needed']
   no-promise-executor-return: 0
