--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "prepare": "husky install",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
@@ -10,7 +11,6 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
-    "prepare": "husky install",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -21,6 +21,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "autoprefixer": "10.4.13",
     "eslint": "8.32.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-airbnb-typescript": "17.0.0",
@@ -32,7 +33,9 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "husky": "8.0.3",
     "lint-staged": "13.1.0",
+    "postcss": "8.4.21",
     "prettier": "2.8.3",
-    "prettier-plugin-tailwindcss": "0.2.1"
+    "prettier-plugin-tailwindcss": "0.2.1",
+    "tailwindcss": "3.2.4"
   }
 }
