--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "clsx": "1.2.1",
     "next": "13.1.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
